Versão do professor com melhorias.